--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "parvin",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
