auth jwt bcryptjs

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URL=mongodb+srv://psultana6:6sk0RiN29iAVHIRE@cluster0.oxgkxrb.mongodb.net/crud-app
+
+
+
+JWT_SECRECT_KEY=hfkadhkfhkdhfsgfgsdkgkahfkhfkdk
